--- a/fe/index.html
+++ b/fe/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>vinfast-e-charge-hub</title>
+  <title>Hệ thống đổi pin</title>
   <meta name="description" content="Lovable Generated Project" />
   <meta name="author" content="Lovable" />
 
@@ -16,6 +16,8 @@
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:site" content="@lovable_dev" />
   <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+  <link rel="icon" type="image/png" href="./src/assets/meo.png" />
+
 </head>
 
 <body>
