--- a/fe/index.html
+++ b/fe/index.html
@@ -17,6 +17,7 @@
   <meta name="twitter:site" content="@lovable_dev" />
   <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
   <link rel="icon" type="image/png" href="./src/assets/meo.png" />
+  <link href="https://unpkg.com/maplibre-gl/dist/maplibre-gl.css" rel="stylesheet" />
 
 </head>
 
