--- a/fe/index.html
+++ b/fe/index.html
@@ -16,7 +16,7 @@
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:site" content="@lovable_dev" />
   <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
-  <link rel="icon" type="image/png" href="./src/assets/meo.png" />
+  <link rel="icon" type="image/png" href="./src/assets/logo.png" />
   <link href="https://unpkg.com/maplibre-gl/dist/maplibre-gl.css" rel="stylesheet" />
 
 </head>
